Spacing Fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -375,7 +375,7 @@ width: 100%;
 /* Row */
 
 	.column{
-		flex: 50%;
+		flex: 33%;
 	}
 
 	.row {
